--- a/adope_une_piece/src/main/resources/application.properties
+++ b/adope_une_piece/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Informations sur la BDD à exploiter
 spring.datasource.url = jdbc:mysql://localhost:3306/adopte_une_piece_db?useSSL=false
 spring.datasource.username = teamadopteunepiece
-spring.datasource.password = teamadopteunepiece
+spring.datasource.password = teamAdopteunepiece01$
 
 ## Autoriser l'affichage des requêtes SQL faites par Hibernate
 spring.jpa.show-sql=true
